feat(parallel-computing): introduce self-extracting bash scripts generation
Signed-off-by: Vadym Yaroshchuk <contact@y9vad9.com>